--- a/index.html
+++ b/index.html
@@ -44,17 +44,6 @@
 <script src="preloader.js"></script>
 </head>
 <body>
-<!-- HEADER, zona superior que se repite en todos los HTML -->
-<header>
-
-</header>
-<!-- MAIN, zona central diferente en todos los HTML, es el contenido diferenciador de las páginas -->
-<main>
-
-</main>
-<!-- FOOTER, zona inferior que se repite en todos los HTML -->
-<footer>
-
-</footer>
+<div class="circulo"></div>
 </body>
 </html>
